# nervemq

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  bun.lockb  components.json  eslint.config.mjs  globals.d.ts  hero.ts  next.config.ts  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
app/: error.tsx  globals.css  globals.ts  layout.tsx  page.tsx  providers.tsx
app/(dashboard)/admin/: page.tsx
app/(dashboard)/api-keys/: page.tsx
app/(dashboard)/namespaces/: page.tsx
app/(dashboard)/queues/: list.tsx  page.tsx
app/(dashboard)/queues/[...queueId]/: page.tsx  queue-detail.tsx
app/login/: page.tsx
components/: access-denied.tsx  create-api-key.tsx  create-namespace.tsx  create-queue.tsx  create-user.tsx  data-table.tsx  header.tsx  modify-user.tsx  not-found.tsx  purge-queue.tsx  queue-attributes.tsx  queue-settings.tsx  send-message.tsx  theme.tsx
components/admin/: table.tsx
components/api-keys/: table.tsx
components/namespaces/: table.tsx
components/queues/: table.tsx
components/ui/: command.tsx  dropdown-menu.tsx  sidebar.tsx  spinner.tsx  table.tsx  textarea.tsx
docs/architecture/: actix-forks.md  dead-letter-queues.md  message-lifecycle.md  namespaces.md  routing.md  sessions.md
examples/node.js/: bun.lockb  index.ts  package.json
examples/python/: README.md  benchmark.py  example.py  seed_messages.py  test_sqs.py
examples/rust/src/: main.rs
lib/: types.ts  yup-validator.ts
lib/actions/: api.ts
lib/hooks/: use-mobile.tsx  use-verify.tsx
lib/schemas/: create-namespace.ts  create-user.ts  login-form.ts  modify-user.ts  queue-settings.ts  send-message.ts
lib/state/: global.ts
migrations/: 0002_visibility_timeout.down.sql  0002_visibility_timeout.up.sql  0003_server_secrets.down.sql  0003_server_secrets.up.sql  0004_queue_tags_text_affinity.down.sql  0004_queue_tags_text_affinity.up.sql  0005_text_affinity_sweep.down.sql  0005_text_affinity_sweep.up.sql  0006_message_received_at.down.sql  0006_message_received_at.up.sql  0007_first_delivered_at.down.sql  0007_first_delivered_at.up.sql  0008_receipt_handle_partial_index.down.sql  0008_receipt_handle_partial_index.up.sql  0009_session_expiry.down.sql  0009_session_expiry.up.sql  0010_separate_sessions_db.down.sql  0010_separate_sessions_db.up.sql
src/: cli.rs  config.rs  lib.rs  main.rs  message.rs  service.rs
src/api/: admin.rs  auth.rs  endpoint_tests.rs  mod.rs  queue.rs  tokens.rs
src/auth/: credential.rs  session.rs
src/auth/middleware/: authentication.rs  protected_route.rs
src/auth/protocols/: sigv4.rs
src/kms/: mod.rs  sqlite.rs
src/sqs/: endpoint_tests.rs  method.rs  mod.rs  sdk_tests.rs  types.rs
