[package]
name = "nervemq"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Portable, SQS-compatible message queue backed by SQLite."
authors = ["Will Hopkins <will@fortress.build>"]
readme = "README.md"
repository = "https://github.com/fortress-build/nervemq"
license = "Apache-2.0"
keywords = ["database", "sqlite", "messaging", "queue", "message-queue"]
categories = ["asynchronous", "database", "data-structures"]

[workspace]
members = ["examples/rust"]

[features]
default = ["embed-ui"]
# Embed the prebuilt Next.js static export (`out/`) into the binary and serve it.
# Requires `bun run build` to have produced `out/` before `cargo build`.
# For an API-only server, build with `--no-default-features`.
embed-ui = ["dep:rust-embed"]

[lib]
name = "nervemq"
path = "src/lib.rs"

[[bin]]
name = "nervemq"
path = "src/main.rs"


[dependencies.actix-cors]
version = "0.7"

[dependencies.actix-session]
package = "nervemq-actix-session"
version = "0.10.2"
features = ["cookie-session"]

[dependencies.actix-identity]
package = "nervemq-actix-identity"
version = "0.8.1"

[dependencies]
actix-http = "3.9.0"
actix-web = { version = "4.9.0", features = [
  "actix-tls",
  # "openssl",
  "cookies",
  "macros",
  "secure-cookies",
] }
aes-gcm-siv = "0.11.1"
anyhow = "1.0.94"
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
aws-sdk-kms = "1.51.0"
aws-sigv4 = "1.2.6"
base64 = "0.22.1"
bincode = "1.3.3"
bon = "3.3.0"
bs58 = { version = "0.5.1", features = ["sha2"] }
bytes = { version = "1.9.0", features = ["serde"] }
chrono = "0.4.39"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = { version = "0.3.31", features = ["io", "tokio-io"] }
hex = { version = "0.4.3", features = ["serde"] }
hmac = { version = "0.12.1", features = ["std"] }
http = "1.2.0"
itertools = "0.13.0"
md5 = "0.7.0"
papaya = "0.1.6"
pom = "3.4.0"
rand = "0.8.5"
rust-embed = { version = "8", optional = true, features = ["mime-guess"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-email = "3.1.0"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", features = ["oid", "sha2-asm", "compress"] }
snafu = "0.8.5"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "tls-native-tls",
  "uuid",
  "chrono",
  "json",
  "time",
  "macros",
] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = [
  "json",
  "bincode",
  "serde",
  "educe",
] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = [
  "tracing",
  "serde",
  "json",
  "env-filter",
] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
zeroize = { version = "1.8.1", features = ["serde", "derive"] }

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
lto = true
